# SAD

./: CMakeLists.txt  Makefile  README.md  notes.txt
src/: SAD.hpp  main.cpp
src/entities/: Window.cpp  Window.hpp  ele.cpp  ele.h  elephant.cpp  elephant.h
src/entities/base/: BaseObject.cpp  BaseObject.hpp
src/entities/base/abstract/: Object.hpp
src/entities/common/: Texture.cpp  Texture.hpp
src/singletons/: Application.cpp  Application.hpp  Events.cpp  Events.hpp  SingletonBase.hpp  TextureManager.cpp  TextureManager.hpp  singletons.hpp
src/tests/: ApplicationTest.cpp  ApplicationTest.hpp  BaseObjectTest.cpp  BaseObjectTest.hpp  TextureManagerTest.cpp  TextureManagerTest.hpp  WindowTest.cpp  WindowTest.hpp
src/utils/: comparator.hpp  test-tools.hpp
